[gd_scene load_steps=19 format=2]

[ext_resource path="res://interface/Controls.gd" type="Script" id=1]
[ext_resource path="res://interface/Font/VerdanaFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://interface/MoneyToGiveBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/Button.png" type="Texture" id=4]
[ext_resource path="res://interface/InfoIcon.png" type="Texture" id=5]
[ext_resource path="res://interface/HistoryIcon.png" type="Texture" id=6]
[ext_resource path="res://interface/Arrow_button.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.517647, 0.494118, 0.529412, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 16, 16 )
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 4 )
region_rect = Rect2( 36, 0, 18, 18 )
margin_left = 2.0
margin_right = 2.0

[sub_resource type="StyleBoxTexture" id=10]
content_margin_left = 13.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 18, 18 )
margin_left = 2.0
margin_right = 2.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 8, 8, 8 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 16, 8, 8 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 8, 8 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 7 )
region_rect = Rect2( 8, 8, 8, 8 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 7 )
region_rect = Rect2( 8, 16, 8, 8 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 7 )
region_rect = Rect2( 8, 0, 8, 8 )

[node name="ControlsUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 96.0
margin_bottom = 96.0
custom_styles/panel = SubResource( 1 )

[node name="TitlePanel" type="Panel" parent="Panel"]
margin_right = 96.0
margin_bottom = 16.0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Panel/TitlePanel"]
margin_left = 1.0
margin_top = -2.0
margin_right = 53.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Budget:"

[node name="BudgetScreen" parent="Panel" instance=ExtResource( 3 )]
margin_top = 16.0
margin_right = 96.0
margin_bottom = 34.0

[node name="InfoButton" type="Button" parent="Panel"]
margin_left = 77.0
margin_top = 77.0
margin_right = 95.0
margin_bottom = 95.0
rect_clip_content = true
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Panel/InfoButton"]
margin_left = 1.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 5 )

[node name="HisotryButton" type="Button" parent="Panel"]
margin_left = 57.0
margin_top = 77.0
margin_right = 75.0
margin_bottom = 95.0
rect_clip_content = true
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Panel/HisotryButton"]
margin_left = 1.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 6 )

[node name="Control" type="Control" parent="Panel"]
margin_left = 12.0
margin_top = 38.0
margin_right = 52.0
margin_bottom = 78.0

[node name="AmountScreen" parent="Panel/Control" instance=ExtResource( 3 )]
margin_right = 68.0

[node name="UpButton" type="Button" parent="Panel/Control"]
margin_left = 71.0
margin_top = -2.0
margin_right = 87.0
margin_bottom = 14.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="DownButton" type="Button" parent="Panel/Control"]
margin_left = 71.0
margin_top = 11.0
margin_right = 87.0
margin_bottom = 27.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )

[node name="GiveButton" type="Button" parent="Panel/Control"]
margin_left = -5.0
margin_top = 20.0
margin_right = 29.0
margin_bottom = 38.0
rect_clip_content = true
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[node name="GiveLabel" type="Label" parent="Panel/Control/GiveButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -9.0
margin_right = 15.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Give
"
align = 1
valign = 1

[node name="DenyButton" type="Button" parent="Panel/Control"]
margin_left = 34.0
margin_top = 20.0
margin_right = 74.0
margin_bottom = 38.0
rect_clip_content = true
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[node name="DenyLabel" type="Label" parent="Panel/Control/DenyButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -9.0
margin_right = 17.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Deny
"
align = 1
valign = 1

[connection signal="pressed" from="Panel/Control/UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="pressed" from="Panel/Control/DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="pressed" from="Panel/Control/GiveButton" to="." method="_on_GiveButton_pressed"]
[connection signal="pressed" from="Panel/Control/DenyButton" to="." method="_on_DenyButton_pressed"]
